src/objects/Network__c.object
<CustomObject>
    <description>Networks belonging to a Hub Account. Members of the Network (other Accounts with or without Contacts) are related via the Contact Member or Account Member Object.</description>
    <fields>
        <fullName>Account_Loyalty_D__c</fullName>
        <formula>TEXT(Hub_Account__r.Loyalty_Implants_Basic__c)</formula>
        <label>Account Loyalty</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Volume_D__c</fullName>
        <formula>TEXT(Hub_Account__r.Volume_Implants__c)</formula>
        <label>Account Volume</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_SBUs__c</fullName>
        <label>Active SBUs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IMPL</fullName>
                </value>
                <value>
                    <fullName>PREV</fullName>
                </value>
                <value>
                    <fullName>PROS</fullName>
                </value>
                <value>
                    <fullName>REST</fullName>
                </value>
                <value>
                    <fullName>ENDO</fullName>
                </value>
                <value>
                    <fullName>ORTH</fullName>
                </value>
                <value>
                    <fullName>MANT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand_ATIS_D_IT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ATIS (IT)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brand_ATIS_EV_D_IT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ATIS EV (IT)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brand_ATLANTIS_Abutments_D_IT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ATLANTIS Abutments (IT)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brand_ATLANTIS_ISUS_D_IT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ATLANTIS ISUS (IT)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brand_Ankylos_D_IT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ankylos (IT)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brand_Frios_D_IT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Frios (IT)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brand_SIMPLANT_D_IT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SIMPLANT (D-IT)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brand_XiVE_D_IT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>XiVE  (IT)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CEO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CEO</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Networks (Contact)</relationshipLabel>
        <relationshipName>Networks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CFO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CFO</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Networks (Contact)</relationshipLabel>
        <relationshipName>Networks2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chain_Business_agreement_content__c</fullName>
        <label>Business agreement content</label>
        <length>131000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Chain_Education__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Education</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chain_Marketing_support__c</fullName>
        <label>Marketing support</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chain_Preferred_products__c</fullName>
        <label>Preferred products</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Chain_Turnover_CY__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Chain Turnover CY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Chain_Turnover_LY__c</fullName>
        <label>Chain Turnover LY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Chain_VAT_number__c</fullName>
        <label>Chain VAT number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chain_related_laboratory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related laboratory</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Lab Customer, Lab Prospect, ERP Lab Account, Non-ERP Lab Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Networks (Related laboratory)</relationshipLabel>
        <relationshipName>Networks2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chain_training__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clinic_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clinic Director</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Networks (Clinic Director)</relationshipLabel>
        <relationshipName>Networks3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_D_IT__c</fullName>
        <description>Scientific Study, Contract in place? (D-IT)</description>
        <inlineHelpText>Scientific Study, Contract in place? (D-IT)</inlineHelpText>
        <label>Contract (IT)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Creator_Country__c</fullName>
        <formula>Case(CreatedBy.User_Country__c, 
&quot;Australia&quot; ,&quot;Australia&quot; , 
&quot;Austria&quot; ,&quot;Austria&quot; , 
&quot;Belgium&quot;, &quot;Belgium&quot;, 
&quot;Canada&quot; ,&quot;Canada&quot; , 
&quot;Denmark&quot;, &quot;Denmark&quot;, 
&quot;Finland&quot; ,&quot;Finland&quot; , 
&quot;France&quot; ,&quot;France&quot; , 
&quot;Germany&quot; ,&quot;Germany&quot; , 
&quot;Holland&quot; ,&quot;Holland&quot; , 
&quot;HQ&quot; ,&quot;HQ&quot; , 
&quot;Italy&quot; ,&quot;Italy&quot; , 
&quot;Luxembourg&quot; ,&quot;Luxembourg&quot; , 
&quot;Norway&quot; ,&quot;Norway&quot; , 
&quot;New Zealand&quot; ,&quot;New Zealand&quot; , 
&quot;Poland&quot; ,&quot;Poland&quot; , 
&quot;Portugal&quot; ,&quot;Portugal&quot; , 
&quot;Russia&quot;, &quot;Russia&quot;,
&quot;Spain&quot;,&quot;Spain&quot;, 
&quot;Sweden&quot; ,&quot;Sweden&quot; , 
&quot;Sweden-HQ&quot; ,&quot;Sweden-HQ&quot; , 
&quot;Switzerland&quot; ,&quot;Switzerland&quot; , 
&quot;Taiwan&quot; ,&quot;Taiwan&quot; ,
&quot;UK&quot; ,&quot;UK&quot; , 
&quot;Japan&quot; ,&quot;Japan&quot; , 
&quot;USA&quot;, &quot;USA&quot;, &quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Creator Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creator_Market__c</fullName>
        <formula>Case(CreatedBy.Market__c, 
&quot;Australia&quot; ,&quot;Australia&quot; , 
&quot;Austria&quot; ,&quot;Austria&quot; , 
&quot;BeNeLux&quot;, &quot;BeNeLux&quot;, 
&quot;ATN&quot;, &quot;ATN&quot;, 
&quot;France&quot; ,&quot;France&quot; , 
&quot;Germany&quot; ,&quot;Germany&quot; , 
&quot;HQ&quot; ,&quot;HQ&quot; , 
&quot;Italy&quot; ,&quot;Italy&quot; , 
&quot;Poland&quot; ,&quot;Poland&quot; , 
&quot;Russia&quot;,&quot;Russia&quot;,
&quot;Spain&quot;,&quot;Spain&quot;, 
&quot;Switzerland&quot; ,&quot;Switzerland&quot; , 
&quot;UK&quot; ,&quot;UK&quot; , 
&quot;Japan&quot; ,&quot;Japan&quot; , 
&quot;NA&quot;, &quot;NA&quot;, &quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Creator Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dental_Chain_Mission__c</fullName>
        <label>Mission</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dental_Chain_Vision__c</fullName>
        <label>Vision</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HQ_Total_Inv_already_provided_D_IT__c</fullName>
        <defaultValue>0</defaultValue>
        <description>HQ Total Investment already provided (D-IT)</description>
        <inlineHelpText>HQ Total Investment already provided (D-IT)</inlineHelpText>
        <label>HQ Total Inv. already provided (IT)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HQ_Total_Investment_D_IT__c</fullName>
        <description>HQ Total Investment  (D-IT)</description>
        <inlineHelpText>HQ Total Investment (D-IT)</inlineHelpText>
        <label>HQ Total Investment (IT)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HUB_account_owner__c</fullName>
        <formula>Hub_Account__r.Owner.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HUB account owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HUB_address__c</fullName>
        <formula>Hub_Account__r.ETM2_Street_Address__c &amp; BR () &amp;  Hub_Account__r.ETM2_Zip_Code__c &amp; &quot;, &quot; &amp;  Hub_Account__r.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HUB address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HUB_phone__c</fullName>
        <formula>Hub_Account__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HUB phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hub_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hub Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Hub Account in Networks</relationshipLabel>
        <relationshipName>Networks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hub_Account_lookup__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Hub Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Networks (Hub Account)</relationshipLabel>
        <relationshipName>Networks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hub_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hub Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Hub Contact in Networks</relationshipLabel>
        <relationshipName>Networks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_Network__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Designate this Network as the Account&apos;s Core Network. In the US and Canada - this is required for 50+ Implants Customers.</inlineHelpText>
        <label>Key Network</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Local_Total_Inv_already_provided_D_IT__c</fullName>
        <description>Local Total Investment already provided (D-IT)</description>
        <inlineHelpText>Local Total Investment already provided (D-IT)</inlineHelpText>
        <label>Local Total Inv. already provided (IT)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Local_Total_Investment_D_IT__c</fullName>
        <description>Scientific Study, Local Total Investment (D-IT)</description>
        <inlineHelpText>Scientific Study, Local Total Investment (D-IT)</inlineHelpText>
        <label>Local Total Investment (IT)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Main_Competitor_D__c</fullName>
        <formula>Hub_Account__r.Main_Competitor_D_Text__c</formula>
        <label>Main Competitor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Materials_HQ_D_IT__c</fullName>
        <description>Materials HQ (D-IT)</description>
        <inlineHelpText>Materials HQ (D-IT)</inlineHelpText>
        <label>Materials HQ (IT)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Materials_IT_D_IT__c</fullName>
        <description>Materials IT (D-IT)</description>
        <inlineHelpText>Materials IT (D-IT)</inlineHelpText>
        <label>Materials IT (IT)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Network_Category__c</fullName>
        <label>Network Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Atlantis referral network</fullName>
                </value>
                <value>
                    <fullName>Endodontic Referral Network</fullName>
                </value>
                <value>
                    <fullName>Implants Referral Network</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>DSO Network</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Network_HQ__c</fullName>
        <description>Used in reports</description>
        <formula>1</formula>
        <inlineHelpText>Used in reports</inlineHelpText>
        <label>Network # (HQ)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Network_Type__c</fullName>
        <label>Network Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advisory Board</fullName>
                </value>
                <value>
                    <fullName>Lab Customers Network</fullName>
                </value>
                <value>
                    <fullName>Lab-to-Lab Network</fullName>
                </value>
                <value>
                    <fullName>Training Group</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                    <default>true</default>
                    <label>Referral</label>
                </value>
                <value>
                    <fullName>MS Referral</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>KOL Network</fullName>
                </value>
                <value>
                    <fullName>Study Group</fullName>
                </value>
                <value>
                    <fullName>Commercial Agreement</fullName>
                </value>
                <value>
                    <fullName>Scientific Project</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Residency</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Regional</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>DSO Network</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Network__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Network</label>
        <referenceTo>Network__c</referenceTo>
        <relationshipLabel>Networks</relationshipLabel>
        <relationshipName>Networks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Area__c</fullName>
        <description>Used for separating Networks</description>
        <label>Product Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Surgery</fullName>
                </value>
                <value>
                    <fullName>Urology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchasing_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchasing Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Networks (Purchasing Manager)</relationshipLabel>
        <relationshipName>Networks4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regenerative_solutions_user__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Regenerative solutions user?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_CY_D__c</fullName>
        <formula>Hub_Account__r.TS_CY_D_AllPLs_AllPCs_AllBrands__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales CY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Dental_LY__c</fullName>
        <formula>Hub_Account__r.TS_CY_1_D_AllPLs_AllPCs_AllBrands__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Dental LY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Dental_YTD__c</fullName>
        <formula>Hub_Account__r.TS_CY_D_AllPLs_AllPCs_AllBrands__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Dental YTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_LY_D__c</fullName>
        <formula>Hub_Account__r.TS_CY_1_D_AllPLs_AllPCs_AllBrands__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales LY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_ATL_Abuts_CY__c</fullName>
        <formula>Hub_Account__r.TQ_CY_D_DD_Abuts_Atlantis__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold ATL Abut&apos;s CY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_ATL_Abuts_LY__c</fullName>
        <formula>Hub_Account__r.TQ_CY_1_D_DD_Abuts_Atlantis__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold ATL Abut&apos;s LY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_ATL_Abuts_YTD__c</fullName>
        <description>Hub_Account__r.TQ_CY_D_DD_CustAbuts_Atlantis__c</description>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold ATL Abut&apos;s YTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_Implants_CY__c</fullName>
        <formula>Hub_Account__r.TQ_CY_D_DI_Implants_AllBrands__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold Implants CY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_Implants_LY__c</fullName>
        <formula>Hub_Account__r.TQ_CY_1_D_DI_Implants_AllBrands__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold Implants LY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_Implants_YTD__c</fullName>
        <formula>Hub_Account__r.TQ_CY_D_DI_Implants_AllBrands__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold Implants YTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_Stock_Abuts_CY__c</fullName>
        <formula>Hub_Account__r.TQ_CY_D_DI_StockAbuts_AllBrands__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hub Sold Stock Abut&apos;s CY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_Stock_Abuts_LY__c</fullName>
        <formula>Hub_Account__r.TQ_CY_1_D_DI_StockAbuts_AllBrands__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hub Sold Stock Abut&apos;s LY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_Stock_Abuts_YTD__c</fullName>
        <formula>Hub_Account__r.TQ_CY_D_DI_StockAbuts_AllBrands__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hub Sold Stock Abut&apos;s YTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Study_start_year_D_IT__c</fullName>
        <description>Scientific Study start year (D-IT)</description>
        <inlineHelpText>Scientific Study start year (D-IT)</inlineHelpText>
        <label>Study start year (IT)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2006</fullName>
                </value>
                <value>
                    <fullName>2007</fullName>
                </value>
                <value>
                    <fullName>2008</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Study_status_D_IT__c</fullName>
        <description>Scientific Study status (D-IT)</description>
        <inlineHelpText>Scientific Study status (D-IT)</inlineHelpText>
        <label>Study status (IT)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pipeline</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Ongoing</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Study_type_D_IT__c</fullName>
        <description>Scientific Study type (D-IT)</description>
        <inlineHelpText>Scientific Study type (D-IT)</inlineHelpText>
        <label>Study type (IT)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FSS</fullName>
                </value>
                <value>
                    <fullName>IIS</fullName>
                </value>
                <value>
                    <fullName>TIIS</fullName>
                </value>
                <value>
                    <fullName>CS</fullName>
                </value>
                <value>
                    <fullName>TCS</fullName>
                </value>
                <value>
                    <fullName>CR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Xof_Account_Network_Members__c</fullName>
        <label># of Account Network Members</label>
        <summaryForeignKey>Account_Network_Member__c.Network__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Xof_Contact_Network_Members__c</fullName>
        <label># of Contact Network Members</label>
        <summaryForeignKey>Contact_Network_Member__c.Network__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Yearly_ATL_Potential__c</fullName>
        <formula>Hub_Account__r.ATL_Abut_Potential_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yearly ATL Potential</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>central_contact_owner__c</fullName>
        <formula>Hub_Contact__r.Owner.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>central contact owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Account_Members_Range__c</fullName>
        <formula>IF( Xof_Account_Network_Members__c = 0, &quot;a. 0&quot;, 
IF( Xof_Account_Network_Members__c &gt; 0 &amp;&amp; Xof_Account_Network_Members__c&lt;= 5, &quot;b. 1-5&quot;, 
IF( Xof_Account_Network_Members__c &gt; 5 &amp;&amp; Xof_Account_Network_Members__c&lt;= 10,&quot;c. 6-10&quot;, 
IF( Xof_Account_Network_Members__c &gt; 10 &amp;&amp; Xof_Account_Network_Members__c&lt;=15,&quot;d. 11-15&quot;, 
&quot;e. &gt;15&quot; ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Account Members Range</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Contact_Members_Range__c</fullName>
        <formula>IF( Xof_Contact_Network_Members__c  = 0, &quot;a. 0&quot;, 
 IF( Xof_Contact_Network_Members__c  &gt; 0 &amp;&amp; Xof_Contact_Network_Members__c&lt;=  5, &quot;b. 1-5&quot;, 
 IF( Xof_Contact_Network_Members__c  &gt; 5  &amp;&amp; Xof_Contact_Network_Members__c&lt;= 10,&quot;c. 6-10&quot;, 
 IF( Xof_Contact_Network_Members__c  &gt; 10 &amp;&amp; Xof_Contact_Network_Members__c&lt;=15,&quot;d. 11-15&quot;,
 &quot;e. &gt;15&quot; ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Contact Members Range</label>
        <type>Text</type>
    </fields>
    <label>Network</label>
    <listViews>
        <fullName>ALL_Network</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>Network_Type__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Hub_Account__c</columns>
        <columns>Hub_Contact__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>#All Networks</label>
    </listViews>
    <listViews>
        <fullName>DT_Launch_Networks</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>DT:</value>
        </filters>
        <label>DT Launch Networks</label>
        <sharedTo>
            <role>DNA_CRMANALYST</role>
            <roleAndSubordinates>DNA_CRMANALYST</roleAndSubordinates>
            <roleAndSubordinates>NA_CRM_Analyst</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Endodontic_Referral_Networks</fullName>
        <columns>OWNER.ALIAS</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Network_Type__c</columns>
        <columns>Hub_Account__c</columns>
        <columns>Product_Area__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Network_Category__c</field>
            <operation>equals</operation>
            <value>Endodontic Referral Network</value>
        </filters>
        <label>Endodontic Referral Networks</label>
        <sharedTo>
            <roleAndSubordinates>NA_CRM_Analyst</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Implants_Referral_Networks</fullName>
        <columns>NAME</columns>
        <columns>Hub_Account__c</columns>
        <columns>HUB_address__c</columns>
        <columns>HUB_phone__c</columns>
        <columns>Network_Category__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Network_Category__c</field>
            <operation>equals</operation>
            <value>Implants Referral Network</value>
        </filters>
        <label>Implants Referral Networks</label>
        <sharedTo>
            <roleAndSubordinates>NA_CRM_Analyst</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NO_Spesialister</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>HUB_account_owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OBJECT_ID</field>
            <operation>equals</operation>
            <value>a0120000020K5rL</value>
        </filters>
        <filters>
            <field>OBJECT_ID</field>
            <operation>equals</operation>
            <value>a0120000020K5rp</value>
        </filters>
        <filters>
            <field>OBJECT_ID</field>
            <operation>equals</operation>
            <value>a0120000020K5q8</value>
        </filters>
        <filters>
            <field>OBJECT_ID</field>
            <operation>equals</operation>
            <value>a0120000020K5rV</value>
        </filters>
        <label>NO: Spesialister</label>
        <language>fr</language>
        <sharedTo>
            <group>Nordics_DI_NO_Dental_Managers</group>
            <group>Nordics_DI_Norway</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X11_My_Contacts_Networks_D</fullName>
        <columns>NAME</columns>
        <columns>Hub_Account__c</columns>
        <columns>Hub_Contact__c</columns>
        <columns>Network_Type__c</columns>
        <columns>Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Network__c.Contacts_Network_D</value>
        </filters>
        <label>#All My Contacts Networks</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>Dentsply_IH_CEO</roleAndSubordinates>
        </sharedTo>
    </listViews>
</CustomObject>